# UMI-3D-Policy

./: .gitignore  README.md
arx5-sdk/: CMakeLists.txt
arx5-sdk/include/app/: solver.h
arx5-sdk/python/: CMakeLists.txt
arx5-sdk/src/app/: controller_base.cpp  solver.cpp
detached-umi-policy/: conda_environment.yaml
umi-arx-hik/: try_python_server.py
umi-arx-hik/config/: left_camera_trigger.yaml
umi-arx-hik/cpp/hik_camera/: CMakeLists.txt  hik_camera_core.cpp  hik_camera_core.h  hik_frame_protocol.h  hik_server_main.cpp  pybind_module.cpp  test_hik_main.cpp
umi-arx-hik/modules/: arx5_env.py
umi-arx-hik/peripherals/: hik_camera.py  multi_hik_camera.py
umi-arx-hik/scripts/: eval_arx5_hik.py
umi_3d_training/diffusion_policy/config/: train_diffusion_unet_timm_umi_workspace.yaml
umi_3d_training/diffusion_policy/config/task/: umi.yaml
umi_3d_training/wandb/: latest-run
umi_3d_training/wandb/offline-run-20260415_184833-m0dfz1k7/: run-m0dfz1k7.wandb
umi_3d_training/wandb/offline-run-20260415_184833-m0dfz1k7/files/: conda-environment.yaml  wandb-metadata.json
umi_3d_training/wandb/offline-run-20260415_185630-5foiigr3/: run-5foiigr3.wandb
umi_3d_training/wandb/offline-run-20260415_185630-5foiigr3/files/: requirements.txt  wandb-metadata.json
